# Fourxel

./: .gitignore  CMakeLists.txt  app  doxygen.config  fragment.glsl  makefile  vertex.glsl
assets/models/: cube.mdl
include/glad/: glad.h
oldsrc/: main.cpp
oldsrc/basic/: input.hpp  windowEvents.cpp
oldsrc/basic/GPUdata/: vertexArrayObject.cpp  vertexArrayObject.hpp  vertexBufferObject.cpp
oldsrc/basic/files/: files.c  files.h
oldsrc/basic/shaders/: shader.cpp  shader.hpp  shaderProgram.cpp  shaderProgram.hpp
oldsrc/basic/texture/: sampler.hpp  texture.cpp  texture.hpp
oldsrc/basic/time/: timeUtils.cpp
oldsrc/camera/: walkingCamera.hpp
oldsrc/geometry/: staticGeometry.cpp  staticGeometry.hpp
src/: main.cpp
src/GPUdata/: BufferObject.cpp  BufferObject.hpp  elementBufferObject.cpp  elementBufferObject.hpp  vertexBufferObject.cpp  vertexBufferObject.hpp
src/basic/: input.cpp  input.hpp  renderer.cpp  renderer.hpp  windowEvents.cpp  windowEvents.hpp
src/basic/GPUdata/: vertexBufferObject.cpp
src/basic/files/: files.c  files.h
src/basic/shaders/: shader.cpp  shader.hpp  shaderProgram.cpp  shaderProgram.hpp  uniform.cpp  uniform.hpp
src/basic/texture/: sampler.cpp
src/basic/time/: timeUtils.hpp
src/camera/: walkingCamera.cpp
src/files/: readfile.c  readfile.cpp  readfile.h  readfile.hpp
src/gameloop/: gameloop.cpp  gameloop.hpp
src/geometry/: staticGeometry.cpp  staticGeometry.hpp
src/glad/: glad.c
src/init/: init.cpp  init.hpp
src/log/: log.cpp  log.hpp
src/render/: model.cpp  model.hpp  renderer.cpp  renderer.hpp  renderer3d.cpp  renderer3d.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/shader/: shader.cpp  shader.hpp  shaderprogram.cpp  shaderprogram.hpp  uniform.cpp  uniform.hpp
src/terminate/: terminate.cpp  terminate.hpp
src/window/: window.cpp  window.hpp
